<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:id="@+id/reviewobject_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/reviewobject_name_edit"
	        android:layout_alignBottom="@+id/reviewobject_name_edit"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:text="@string/review_name"
	        android:layout_margin="5dp" />
	    
	    <EditText 
	        android:id="@id/reviewobject_name_edit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/review_name_edit"
	        android:layout_toRightOf="@id/reviewobject_name"
	        android:layout_toEndOf="@id/reviewobject_name" 
	        android:layout_margin="5dp"/>
	    
	    <TextView
	        android:id="@+id/reviewobject_description"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/reviewobject_desc"
	        android:layout_alignBottom="@+id/reviewobject_desc"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:text="@string/review_description"
	        android:layout_below="@id/reviewobject_name"
	        android:layout_margin="5dp"/>
	   	
	   	<EditText 
	        android:id="@id/reviewobject_desc"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/review_desc"
	        android:layout_toRightOf="@id/reviewobject_description"
	        android:layout_toEndOf="@id/reviewobject_description"
	        android:layout_below="@id/reviewobject_name_edit"
	        android:layout_margin="5dp"/>
	   	
	   	<TextView
	        android:id="@+id/reviewobject_image_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/reviewobject_image_choose"
	        android:layout_alignBottom="@+id/reviewobject_image_choose"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:text="@string/review_image"
	        android:layout_below="@id/reviewobject_description"
	        android:layout_margin="5dp"/>
	   	
	   	<ImageButton 
	        android:id="@+id/reviewobject_image_choose"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_action_new_picture"
	        android:contentDescription="@string/add_item"
	        android:layout_toRightOf="@id/reviewobject_image_name"
	        android:layout_toEndOf="@id/reviewobject_image_name"
	        android:layout_below="@id/reviewobject_desc"
	        android:layout_margin="5dp"/>
	   	
	   	<ImageView 
	   	    android:id="@+id/reviewobject_image"
	   	    android:contentDescription="@null"
	        android:layout_toRightOf="@id/reviewobject_image_choose"
	        android:layout_toEndOf="@id/reviewobject_image_choose"
	        android:layout_below="@id/reviewobject_desc"
	        android:src="@drawable/ic_action_picture"
	        android:layout_height="48dp"
	        android:layout_width="48dp"
	        android:scaleType="centerInside"
	        android:layout_margin="5dp"/>
	   	
	   	<RelativeLayout 
	   	    android:id="@+id/revob_tags_layout"
	   	    android:layout_below="@id/reviewobject_image"
	   	    android:layout_width="wrap_content"
		    android:layout_height="wrap_content">
	   	
		   	<TextView
		        android:id="@+id/review_object_tags"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/review_tags" 
		   	    android:layout_alignParentLeft="true"
		   	    android:layout_alignParentStart="true"
		        android:layout_margin="5dp"/>
		   	
		   	<ImageButton 
		        android:id="@+id/choose_object_tags"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/ic_action_labels"
		        android:contentDescription="@string/add_item"
		        android:layout_toRightOf="@id/review_object_tags"
		        android:layout_toEndOf="@id/review_object_tags"/>
		   	
		   	<ImageButton 
		        android:id="@+id/remove_object_tags"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/ic_stat_content_backspace"
		        android:contentDescription="@string/remove_item"
		        android:layout_toRightOf="@id/choose_object_tags"
		        android:layout_toEndOf="@id/choose_object_tags"/>
		   	
		   	<TextView 
		        android:id="@+id/review_object_tags_list"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/review_tags_list"
		        android:layout_toRightOf="@id/remove_object_tags"
		        android:layout_toEndOf="@id/remove_object_tags"
		        android:layout_alignBaseline="@id/review_object_tags"
		        android:layout_margin="5dp"/>
		</RelativeLayout>
	   	
	   	<TextView
	        android:id="@+id/reviewobject_map_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:text="@string/position"
	        android:layout_below="@id/revob_tags_layout"
	        android:layout_margin="5dp"/>

	   	<rs.reviewer.views.ScrollableMapView
	   	    android:id="@+id/mapview"
	   	    android:orientation="vertical"
	   	    android:layout_width="match_parent"
	        android:layout_height="300dp"
	        android:layout_below="@id/reviewobject_map_label"
	        android:layout_marginBottom="15dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginStart="10dp"
	        android:layout_marginRight="25dp"
	        android:layout_marginEnd="25dp"/>
	
	</RelativeLayout>
</ScrollView>
