<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <ImageView 
   	    android:id="@+id/review_image_content"
   	    android:contentDescription="@null"
        android:src="@drawable/ic_action_picture"
        android:layout_height="128dp"
        android:layout_width="128dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitCenter"
        android:layout_margin="5dp"/>
    
    <TextView
        android:id="@+id/review_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:text="@string/review_name"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/review_image_content"
        android:layout_margin="5dp" />
    
    <TextView
        android:id="@+id/review_name_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:layout_toRightOf="@id/review_name_label"
        android:layout_toEndOf="@id/review_name_label"
        android:layout_alignBaseline="@id/review_name_label" 
        android:layout_below="@id/review_image_content"
        android:layout_margin="5dp"/>
    
    <TextView android:id="@+id/review_desc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:text="@string/created"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/review_name_label"
        android:layout_margin="5dp" />
    
    <TextView
        android:id="@+id/review_desc_contnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:layout_toRightOf="@id/review_desc_label"
        android:layout_toEndOf="@id/review_desc_label"
        android:layout_alignBaseline="@id/review_desc_label"
        android:layout_below="@id/review_name_content" 
        android:layout_margin="5dp"/>
    
    <TextView android:id="@+id/review_rating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:text="@string/review_rating"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/review_desc_label"
        android:layout_margin="5dp" />
    
    <RatingBar
        android:id="@+id/review_rating_content"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/review_rating_label"
        android:layout_toRightOf="@id/review_rating_label"
        android:layout_below="@id/review_desc_contnt"
        android:isIndicator="true" 
        android:numStars="5"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/created_by_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:text="@string/created_by"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/review_rating_label"
        android:layout_margin="5dp"  />

    <TextView
        android:id="@+id/created_by_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:layout_alignBaseline="@+id/created_by_label"
        android:layout_toRightOf="@+id/created_by_label"
        android:layout_toEndOf="@+id/created_by_label"
        android:layout_below="@id/review_desc_contnt" 
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/review_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:text="@string/review_description"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/created_by_label"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/review_description_contnt"
    	android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:layout_below="@id/review_description_label" 
        android:layout_margin="5dp"/>
    
</RelativeLayout>
