<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/revob_image_content"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_action_picture" />

        <TextView
            android:id="@+id/revob_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/revob_image_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:text="@string/review_object_name"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/revob_name_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/revob_name_label"
            android:layout_below="@id/revob_image_content"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/revob_name_label"
            android:layout_toRightOf="@id/revob_name_label"
            android:gravity="center_vertical"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/revob_user_created_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/revob_name_label"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:text="@string/user_created"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/revob_user_created_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/revob_user_created_label"
            android:layout_below="@id/revob_name_content"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/revob_user_created_label"
            android:layout_toRightOf="@id/revob_user_created_label"
            android:gravity="center_vertical"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/revob_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/revob_user_created_label"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:text="@string/review_object_rating"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/revob_rating_content"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/revob_user_created_content"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/revob_rating_label"
            android:layout_toRightOf="@id/revob_rating_label"
            android:isIndicator="true"
            android:numStars="5" />

        <TextView
            android:id="@+id/revob_tags_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/revob_rating_label"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:text="@string/review_object_tags"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/revob_tags_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/revob_tags_label"
            android:layout_below="@id/revob_rating_content"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/revob_tags_label"
            android:layout_toRightOf="@id/revob_tags_label"
            android:gravity="center_vertical"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/revob_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/revob_tags_label"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:text="@string/review_object_description"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/revob_description_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/revob_description_label"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:textColor="#000"
            android:textSize="15sp" />

        <rs.reviewer.views.ScrollableMapView
            android:id="@+id/mapview"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@id/revob_description_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical" />
    </RelativeLayout>

</ScrollView>